# automatic-proof

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: app.yaml  lean.yaml  refinement.yaml  segmentation.yaml
docs/: especificacion-tecnica.md  todo.md
src/article2lean/: __init__.py  __main__.py  app.py  cli.py
src/article2lean/exporters/: __init__.py  graph_exporter.py  lean_exporter.py  report_exporter.py
src/article2lean/formalization/: __init__.py  assumption_manager.py  lean_assembler.py  lean_name_generator.py  proof_step_segmenter.py  statement_formalizer.py
src/article2lean/ingestion/: __init__.py  ast_normalizer.py  markdown_loader.py  pandoc_loader.py
src/article2lean/models/: __init__.py  article_models.py  enums.py  proof_models.py  sketch_models.py
src/article2lean/orchestrators/: __init__.py  article_formalization.py  document_ingestion.py  lean_verification.py  sketch_refinement.py
src/article2lean/proving/: __init__.py  critic.py  executor.py  lean_backend.py  planner.py  repair.py  retriever.py  tactic_agent.py
src/article2lean/references/: __init__.py  citation_resolver.py  dependency_graph.py  theorem_reference_resolver.py
src/article2lean/segmentation/: __init__.py  block_classifier.py  heading_rules.py  inline_label_rules.py  proof_linker.py
src/article2lean/sketches/: __init__.py  hole_classifier.py  node_selector.py  proof_obligation_generator.py  sketch_extractor.py  (+1 more)
tests/: test_cli.py  test_imports.py  test_markdown_loader.py  test_package_layout.py  test_segmentation.py
tests/fixtures/: garrido2025inexact.md
(+4 files in other folders)
